--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -12,12 +12,28 @@
 }
 
 .fl-uiOptions-fatPanel .fl-uiOptions-panels li.fl-uiOptions-panel {
-    width: 7em;
-    height: 7em;
+    width: 9em;
+    height: 9em;
+    min-height: none;
+    background: none;
+    border: none;
+    text-align: center;
+    margin: 0;
+}
+
+.fl-uiOptions-fatPanel .fl-uiOptions-panels li.fl-uiOptions-panel button {
+    width: 6em;
+    height: 6em;
+    background-color: #fff;
+    border: 1px solid black;
+    border-radius: 0.25em;
+    cursor: pointer;
+    margin: 0;
 }
 
 .fl-uiOptions-fatPanel .fl-uiOptions-panels li.fl-uiOptions-panel h2 {
     border: none;
     box-shadow: none;  
     text-transform: lowercase;  
+    color: #fff;
 }
