--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -1,4 +1,10 @@
 /* Demo content */
+@font-face {
+    font-family: 'DemoIcons'; 
+    src:url('fonts/Demo-CK12.eot?#iefix') format('embedded-opentype'), 
+         url('fonts/Demo-CK12.eot'), 
+         url('fonts/Demo-CK12.ttf');
+}
 
 body {
     background-color: #F9F9F5;
@@ -103,6 +109,28 @@ article header #prevNext {
 }
 
 /* Article */
+article #article-filters {
+    border-bottom: 1px solid #E6E6E6;
+
+}
+article #article-filter {
+    float: left;
+    padding-right: 7em;
+    /*border-right: 1px dotted #56544D;*/
+}
+article .article-tab {
+    float: left;
+    padding: 0.5em 1em;
+    font-size: 0.8em;
+    text-align: center;
+    border-right: 1px dotted #56544D;
+    margin-bottom: 0.5em;
+}
+article .article-tab span {
+    display: block;
+    font-size: 2.5em;
+}
+
 article section {
     border-bottom: 1px solid #E6E6E6;
     margin-bottom: 0.25em;
@@ -121,12 +149,12 @@ article img {
 }
 
 /* Discovery Tool */
-.discovery-tool-theme .fl-panelBar {
+.fl-panelBar {
     text-align: right;
     background-color: #6f7b80;
     padding: 1em;
 }
-.discovery-tool-theme .fl-panelBar button {
+.fl-panelBar button {
     background-color: #6f7b80;
     border: 0;
     color: white;
@@ -134,13 +162,46 @@ article img {
     cursor: pointer;
 }
 
-.discovery-tool-theme .fl-uiOptions-discoveryTool  {
+.fl-uiOptions-discoveryTool  {
     position: fixed;
     bottom: 0;
     width: 100%;    
 }
 
-.discovery-tool-theme .fl-uiOptions-discoveryTool iframe {
+.fl-uiOptions-discoveryTool iframe {
     width: 100%;
     border: none;
+}
+
+/* Font Icons */
+
+.fl-icon-search, .fl-icon-prev, .fl-icon-next, .fl-icon-thumbsUp, .fl-icon-thumbsDown, .fl-icon-arrow, .fl-icon-light, .fl-icon-book {
+    font-family: 'DemoIcons';    
+}
+.fl-icon-search:before {
+	content: "\e006";
+}
+.fl-icon-prev:before {
+	content: "\a000";
+}
+.fl-icon-next:before {
+	content: "\a001";
+}
+.fl-icon-thumbsUp:before {
+	content: "\a002";
+    font-size: 2em;	
+}
+.fl-icon-thumbsDown:before {
+	content: "\a003";
+    font-size: 2em;	
+}
+.fl-icon-arrow:before {
+	content: "\a004";
+	font-size: 0.6em;
+}
+.fl-icon-light:before {
+	content: "\a007";
+}
+.fl-icon-book:before {
+	content: "\e008";
 }
