--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -198,6 +198,15 @@
 .fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-high-contrast:after, /* applied when focused and checked*/
 .fl-discoveryTool-icon-high-contrast:hover:after  {content: "\e010";}
 
+.fl-discoveryTool-icon-more-text:before       {content: "\e007";}
+.fl-discoveryTool-icon-more-text:after        {content: "\e013";}
+.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-more-text:before, /* applied when keyboard focused */
+.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-more-text:before, /* applied when focused and checked*/
+.fl-discoveryTool-icon-more-text:hover:before {content: "\e000";}
+.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-more-text:after, /* applied when keyboard focused */
+.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-more-text:after, /* applied when focused and checked*/
+.fl-discoveryTool-icon-more-text:hover:after  {content: "\e00c";}
+
 .fl-discoveryTool-icon-low-contrast:before       {content: "\e006";}
 .fl-discoveryTool-icon-low-contrast:after        {content: "\e012";}
 .fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-low-contrast:before, /* applied when keyboard focused */
