GPII-127: Start on more-text enactor and 'details' element exploration test page

--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -38,6 +38,15 @@
     font-family: 'OpenSans',"Myriad Pro", Helvetica, Arial, sans-serif;    
 }
 
+/* text overlay */
+.fl-discoveryTool-altText {
+    background-color: lightgrey;
+}
+.fl-discoveryTool-altTextIcon:before {
+    font-family: 'DiscoveryToolIcons';
+    content: "\e013";
+}
+
 /* Panels */
 .fl-uiOptions-discoveryTool .fl-uiOptions-panels {
     text-align: center;
